syntax = "proto3";

package com.jin.proto;

option java_package = "com.jin.proto";
option java_outer_classname = "Course";
option java_multiple_files = true;

service CourseService
{
    rpc getCourseById(CourseReq) returns (CourseRes){}

}

message CourseReq
{
    int32 id = 1;
}

message CourseRes
{
    string name = 1;
}